--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask
-line-bot-sdk
-python-dotenv
-requests
-gunicorn
+Flask==2.2.5
+line-bot-sdk==2.4.1
+python-dotenv==0.21.1
+requests==2.31.0
+gunicorn==20.1.0
