--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-Flask==2.2.5
-line-bot-sdk==2.4.1
-python-dotenv==0.21.1
-requests==2.28.1
-gunicorn==20.1.0
-aiohttp==3.8.1
+Flask
+line-bot-sdk
+python-dotenv
+requests
+gunicorn
