--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,21 @@
-aenum==3.1.16
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.7
-aiosignal==1.3.2
-annotated-types==0.7.0
-async-timeout==5.0.1
-attrs==25.3.0
-blinker==1.9.0
-certifi==2025.4.26
-charset-normalizer==3.4.2
-click==8.2.1
+aiohttp==3.9.5
+async-timeout==4.0.3
+attrs==23.2.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
 colorama==0.4.6
-deprecated==1.2.18
-flask==3.1.1
-frozenlist==1.6.0
-future==1.0.0
-gunicorn==23.0.0
-idna==3.10
-itsdangerous==2.2.0
-jinja2==3.1.6
+frozenlist==1.4.1
+huggingface-hub==0.32.4
+idna==3.7
 line-bot-sdk==3.17.1
-markupsafe==3.0.2
-multidict==6.4.4
-packaging==25.0
-propcache==0.3.1
-pydantic==2.11.5
-pydantic-core==2.33.2
-python-dateutil==2.9.0.post0
-requests==2.32.3
-six==1.17.0
-typing-extensions==4.14.0
-typing-inspection==0.4.1
-urllib3==2.4.0
-werkzeug==3.1.3
-wrapt==1.17.2
-yarl==1.20.0
+marshmallow==3.21.1
+multidict==6.0.5
+packaging==24.0
+pyparsing==3.1.2
+python-dotenv==1.0.1
+requests==2.32.2
+six==1.16.0
+urllib3==2.2.1
+yarl==1.9.4
+Flask==3.1.1
