--- a/requirements.txt
+++ b/requirements.txt
@@ -116,7 +116,7 @@ sympy==1.14.0
     # via torch
 tokenizers==0.21.1
     # via transformers
-torch==2.3.0+cpu
+torch==2.3.0
     # via -r requirements.in
 tqdm==4.67.1
     # via
